<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgModa"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/colorModa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imgModa"
        android:layout_toRightOf="@id/imgModa"
        android:text="@string/colorModa"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/precioModa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgModa"
        android:layout_alignBottom="@id/imgModa"
        android:text="@string/precioModa"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tallaModa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgModa"
        android:layout_below="@id/colorModa"
        android:layout_marginBottom="5dp"
        android:text="@string/tallaModa"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/numeroItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgModa"
        android:text="@string/numeroItems"
        android:textSize="20dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"/>

</RelativeLayout>